k8s/version2-helmcharts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: version2-service
  namespace: version2
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-version2
