k8s/version2-helmcharts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apptwo-ingress
  namespace: version2
spec:
  ingressClassName: nginx
  rules:
    - host: vtwo.tjonathan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: version2-service
                port:
                  number: 8080
